# shelf

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  catalog-info.yaml  config.example.toml  config.toml  docker-compose.yaml  repo.http
.github/: dependabot.yml
.github/workflows/: api.yaml  build.yaml  docs.yaml  test.yaml  ui.yaml
api/: Cargo.toml
api/src/: auth.rs  configuration.rs  error.rs  jwt.rs  main.rs
api/src/api/: configuration.rs  crate_controller.rs  dashboard_controller.rs  dashboard_data.rs  macros.rs  mod.rs  models.rs  repo_controller.rs  role_controller.rs  service_account_controller.rs
api/src/api/cargo/: auth.rs  crates.rs  index.rs  mod.rs  models.rs
api/src/repository/: cargo_repository.rs  dashboards_repository.rs  database_tests.rs  mod.rs  models.rs  role_repository.rs  service_accounts_repository.rs
api/src/storage/: local.rs  mod.rs  s3.rs
api/tests/: database_tests.rs
assets/: config.json
charts/shelf/: Chart.yaml  values.yaml
crates/: artifact-manager_0.1.3.crate
migrations/: 20240927055331_repos.sql  20240927060319_cargo_index_config.sql  20240927144419_crate.sql  20241001061525_service_accounts.sql  20241002060358_service_accounts_repos.sql  20241003171830_roles.sql  20241003174809_service_accounts.sql  20241003174831_service_account_repos.sql  20241015044301_crate_metrics.sql  20241015153443_dashboards.sql
migrator/: Cargo.toml
shelf-ui/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo
src/: error.rs  main.rs
test_helpers/: Cargo.toml
ui/: Dockerfile  package.json  pnpm-lock.yaml
(+51 files in other folders)
