[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.40.0", features = ["full"]}
reqwest = "0.12.7"
log = "0.4.22"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
actix-web = "4.9.0"
actix-files = "0.6.6"
env_logger = "0.11.5"
sha2 = "0.10.8"
sqlx = {version = "0.8.2", features = ["runtime-tokio", "postgres", "json", "chrono"]}
chrono = {version = "0.4.38", features = ["serde"]}
actix-cors = "0.7.0"
toml = "0.8.19"
bcrypt = "0.15.1"
rand = "0.8.5"
jsonwebtoken = "9.3.0"

[dev-dependencies]
test-helpers = {version = "0.1.0", path = "../test_helpers"}